--- a/robustness-calculator/pom.xml
+++ b/robustness-calculator/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>edu.cmu.isr</groupId>
     <artifactId>robustness-calculator</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <dependencies>
         <dependency>
@@ -35,6 +35,11 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.5.2</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.xenomachina</groupId>
+            <artifactId>kotlin-argparser</artifactId>
+            <version>2.0.7</version>
         </dependency>
     </dependencies>
 
