--- a/robustness-calculator/pom.xml
+++ b/robustness-calculator/pom.xml
@@ -36,10 +36,15 @@
             <version>5.5.2</version>
             <scope>test</scope>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.xenomachina</groupId>-->
+<!--            <artifactId>kotlin-argparser</artifactId>-->
+<!--            <version>2.0.7</version>-->
+<!--        </dependency>-->
         <dependency>
-            <groupId>com.xenomachina</groupId>
-            <artifactId>kotlin-argparser</artifactId>
-            <version>2.0.7</version>
+            <groupId>com.github.ajalt</groupId>
+            <artifactId>clikt</artifactId>
+            <version>2.8.0</version>
         </dependency>
     </dependencies>
 
