--- a/robustness-calculator/pom.xml
+++ b/robustness-calculator/pom.xml
@@ -12,7 +12,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.10.1</version>
+            <version>[2.10.5.1,)</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
@@ -45,6 +45,12 @@
             <groupId>com.github.ajalt</groupId>
             <artifactId>clikt</artifactId>
             <version>2.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>de.learnlib.distribution</groupId>
+            <artifactId>learnlib-distribution</artifactId>
+            <version>0.16.0</version>
+            <type>pom</type>
         </dependency>
     </dependencies>
 
